# rulsif-abrupt-change-detection

./: .gitignore  Data_Pre_Process.py  Find_Drive_Envent.py  MANIFEST.in  Parallel_Agressive_Dirve_Detection.py  README.md  README_aggressive_driving_analysis.md  aggressive_driving_analysis.md  aggressive_driving_analysis.py  apply_main.py  config.py  kernels.py  pyproject.toml  requirements-dev.txt  requirements.txt  rulsif.py  setup.py
anomaly_detection/: __init__.py
anomaly_detection/applications/: __init__.py
anomaly_detection/classical/: __init__.py
anomaly_detection/core/: __init__.py  base.py  metrics.py  visualization.py
anomaly_detection/deep_learning/: __init__.py
anomaly_detection/time_series/: __init__.py
anomaly_detection/time_series/rulsif/: __init__.py  kernels.py  rulsif.py
anomaly_detection/utils/: __init__.py
dev/: Agressive_Drive_detection.ipynb
examples/: Aggressive_Drive_detection.ipynb  README_PyOD_Integration.md  README_original_format.md  README_synthetic_data.md  generate_original_format_data.py  generate_synthetic_driving_data.py  pyod_integration_example.py  requirements_pyod.txt  simple_data_generator.py  simple_example.py  test_original_format.py  test_synthetic_data.py  time_series_example.py
examples/original_format_data/: 10.csv  11.csv  12.csv  40.csv  45.csv  50.csv  51.csv  52.csv  55.csv  56.csv  56_0.csv  57.csv  60.csv  60_0.csv  61.csv  62.csv  63.csv  63_2.csv  64.csv  64_0.csv  65.csv  66.csv  67.csv  68.csv  69.csv  70.csv  71.csv  72.csv  73.csv  74.csv  77.csv  78.csv  80.csv  81.csv  82.csv  83.csv  84.csv  85.csv  86.csv  87.csv  (+134 more)
examples/synthetic_driving_data/: 10.csv  11.csv  12.csv  40.csv  45.csv  50.csv  51.csv  52.csv  55.csv  56.csv  56_0.csv  57.csv  60.csv  60_0.csv  61.csv  62.csv  63.csv  63_2.csv  64.csv  64_0.csv  65.csv  66.csv  67.csv  68.csv  69.csv  70.csv  71.csv  72.csv  73.csv  74.csv  77.csv  78.csv  80.csv  81.csv  82.csv  83.csv  84.csv  85.csv  86.csv  87.csv  (+1 more)
rulsif/: config.py  driving_data_preprocess.py  find_aggressive_driving_event.py  kernels.py  parallel_aggressive_driving_detection.py  rulsif.py
src/: Data_Pre_Process.py  Find_Drive_Envent.py  Parallel_Agressive_Dirve_Detection.py  config.py  driving_data_preprocess.py  find_aggressive_driving_event.py  kernels.py  parallel_aggressive_driving_detection.py  rulsif.py
tests/: __init__.py  test_rulsif.py
