[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-anomaly-detection"
dynamic = ["version"]
description = "A comprehensive Python library for anomaly detection including classical, deep learning, and time series methods"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Xingqiang Chen", email = "your.email@example.com"}
]
maintainers = [
    {name = "Xingqiang Chen", email = "your.email@example.com"}
]
keywords = ["anomaly detection", "outlier detection", "machine learning", "deep learning", "time series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.1.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.15",
]
deep = [
    "torch>=1.8.0",
    "tensorflow>=2.4.0",
]
full = [
    "torch>=1.8.0",
    "tensorflow>=2.4.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.1.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/awesome-anomaly-detection"
Documentation = "https://awesome-anomaly-detection.readthedocs.io/"
Repository = "https://github.com/yourusername/awesome-anomaly-detection"
"Bug Tracker" = "https://github.com/yourusername/awesome-anomaly-detection/issues"

[tool.setuptools_scm]
write_to = "anomaly_detection/_version.py"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["anomaly_detection"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

